# classico

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
bento/: Bento.rb  Gemfile  Gemfile.lock=
cmake/: cc  common  defs  main  policy
docs/: bin.md
envenido/: cleanup  core  envenido  functions  interactive  mixenv  se  starship.toml  starship.windows.toml  userdefs
golani/: env.go  file.go  go.mod  golani.go  path.go
jasmine/: index.ts  package.json
mk/: bindirs.defs  bindirs.rules  binutils.defs  binutils.rules  build.rules  cc-have-opts  cc.cfg  cc.defs  cc.rules  cfg  clang-sanitizer.cfg  clang-sanitizer.defs  cmake.defs  cmake.rules  common.defs  common.rules  conan.defs  conan.rules  configure.defs  configure.rules  defs  docker-collect-artifacts  docker.defs  docker.rules  extract-obj-symbols  help.defs  help.rules  macos.defs  main  module.docker.rules  openmp.defs  osnick.defs  platform.cfg  rules  run.defs  rust.cfg  rust.defs  rust.rules  term.defs
paella/: Makefile  __init__.py  classes.py  cli.py  debug.py  files.py  func.py  log.py  meta.py  path.py  platform.py  platform_base.py  platform_info.py  range_dict.py  requirements.txt  runner.py  setup.py  text.py  utils.py  utils3.py
posh/: class1.ps1  commands.ps1  defs.ps1  files.ps1  firewall.ps1  time.ps1  types.ps1  utils.ps1  versions.ps1
sbin/: activate  bootstrap  bootstrap.ps1  hard-rearm  setup  system-setup
shibumi/: defs  errors  exports  files  functions  here  interactive  platform  profile  runner  (+9 more)
tests/mk/cmake/: CMakeLists.txt  Makefile
tests/mk/cmake/lib1/: CMakeLists.txt  lib1.cc
tests/mk/cmake/src/: main.cc
tests/mk/cxx-boost/: CMakeLists.txt  Makefile
tests/mk/cxx-boost/boost/: Makefile  Makefile.defs  conanfile.txt
tests/mk/cxx-boost/src/: main.cc
(+102 files in other folders)
