[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paella"
version = "1.0.0"
dynamic = ["dependencies"]

# [project.scripts]

[tool.setuptools.dynamic]
dependencies = { file = ["paella/requirements.txt"] }

[tool.ruff.lint]
ignore = ["A001", "A002", "F403", "F405", "F821", "E722"]

